[build-system]
# build the package with [flit](https://flit.readthedocs.io)
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
# See https://www.python.org/dev/peps/pep-0621/
name = "eb_gh_cli"
dynamic = ["version"] # read from ocr_translate/__init__.py
description = "WIP"
authors = [
    { name = "Davide Grassano" },
]
readme = "README.md"
license = { file = "LICENSE.txt" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: Django",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database :: Database Engines/Servers",
    "Intended Audience :: End Users/Desktop",
]
keywords = ["django", "easybuild", "github"]
requires-python = ">=3.10"
dependencies = [
    "PyGithub",
    "Django~=5.2",
    "click"
]

[project.urls]
Source = "https://github.com/Crivella/eb_gb"

[project.optional-dependencies]
mysql = [
    "pymysql==1.1.0",
]
postgres = [
    "psycopg[binary]==3.1.9",
]
docs = [
    "docutils",
    "sphinx",
    "sphinx_design",
    "sphinx-rtd-theme",
    "sphinx-rtd-dark-mode",
    "sphinxcontrib-openapi",
]
tests = [
    "pytest",
    "pytest-cov",
    "pytest-django",
    "pytest-regressions",
]
pre-commit = [
    "pre-commit",
    "pylint",
    "pylint-pytest",
    "pylint-django",
]
release = [
    "flit"
]

[tool.flit.module]
name = "eb_gh_cli"

[tool.flit.sdist]
exclude = [
    ".gitignore", ".github", ".pre-commit-config.yaml",
    "mysite/", "mysite/*", "manage.py", "tests/", "tests/*",
    "docs/", "docs/*"
    ]

[tool.pytest.ini_options]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "mysite.settings"
log_cli = true

[tool.pylint.main]
load-plugins = [
    "pylint_django",
    "pylint_pytest"
]
django-settings-module = "mysite.settings"

[tool.pylint.messages_control]
disable = [
    "logging-fstring-interpolation",
    "global-statement",
    "broad-exception-caught",
    "too-few-public-methods",
]


[tool.pylint.format]
max-line-length = 120
good-names = [
    "_",
    "l", "r", "b", "t",
    "l1", "r1", "b1", "t1",
    "l2", "r2", "b2", "t2",
    "i", "j",
    "k", "v",
    "f",
]

[tool.pylint.design]
max-args = 10
max-locals = 20
max-attributes = 12
